--- a/Homework-1/package.json
+++ b/Homework-1/package.json
@@ -12,12 +12,10 @@
     "@babel/core": "7.1.6",
     "@babel/preset-env": "7.1.6",
     "@babel/register": "7.0.0",
+    "@babel/plugin-transform-async-to-generator": "7.1.0",
     "babel-loader": "8.0.4",
     "babel-polyfill": "^6.26.0",
     "webpack": "4.25.1",
     "webpack-cli": "3.1.2"
-  },
-  "dependencies": {
-    "@babel/plugin-transform-async-to-generator": "^7.1.0"
   }
 }
