--- a/Homework-2/package.json
+++ b/Homework-2/package.json
@@ -14,7 +14,7 @@
     "@babel/register": "7.0.0",
     "@babel/plugin-transform-async-to-generator": "7.1.0",
     "babel-loader": "8.0.4",
-    "babel-polyfill": "^6.26.0",
+    "babel-polyfill": "6.26.0",
     "webpack": "4.25.1",
     "webpack-cli": "3.1.2"
   }
