--- a/Homework-3/package.json
+++ b/Homework-3/package.json
@@ -20,6 +20,7 @@
     "babel-polyfill": "6.26.0",
     "css-loader": "1.0.1",
     "extract-text-webpack-plugin": "4.0.0-beta.0",
+    "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.5",
     "node-sass": "4.10.0",
     "sass-loader": "7.1.0",
