--- a/Homework-4/.babelrc
+++ b/Homework-4/.babelrc
@@ -2,6 +2,7 @@
   "presets": ["@babel/preset-env"],
   "plugins": [
     "@babel/plugin-transform-async-to-generator",
-    "@babel/plugin-syntax-dynamic-import"
+    "@babel/plugin-syntax-dynamic-import",
+    "@babel/plugin-proposal-class-properties"
   ]
 }
