--- a/Homework-4/package.json
+++ b/Homework-4/package.json
@@ -12,7 +12,7 @@
   },
   "devDependencies": {
     "@babel/core": "7.1.6",
-    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/plugin-syntax-dynamic-import": "7.0.0",
     "@babel/plugin-transform-async-to-generator": "7.1.0",
     "@babel/preset-env": "7.1.6",
     "@babel/register": "7.0.0",
@@ -20,13 +20,16 @@
     "babel-polyfill": "6.26.0",
     "css-loader": "1.0.1",
     "extract-text-webpack-plugin": "4.0.0-beta.0",
-    "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^0.4.5",
+    "html-webpack-plugin": "3.2.0",
+    "mini-css-extract-plugin": "0.4.5",
     "node-sass": "4.10.0",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.1",
     "webpack": "4.25.1",
     "webpack-cli": "3.1.2",
     "webpack-dev-server": "3.1.10"
+  },
+  "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.2.1"
   }
 }
