--- a/Homework-8/newsapp/package.json
+++ b/Homework-8/newsapp/package.json
@@ -11,7 +11,12 @@
     "express": "4.16.0",
     "http-errors": "1.6.2",
     "jade": "1.11.0",
+    "lodash": "^4.17.11",
+    "mongoose": "5.4.7",
     "morgan": "1.9.0",
-    "winston": "^3.1.0"
+    "passport": "^0.4.0",
+    "passport-facebook": "3.0.0",
+    "passport-http": "0.3.0",
+    "winston": "3.1.0"
   }
 }
